--- a/www/css/lev_index_temp.css
+++ b/www/css/lev_index_temp.css
@@ -1,9 +1,9 @@
 div#main {
+    border: solid white 1px;
     position: relative;
-    border-style: solid;
-    border-width: 1px;
-    width: 37em;
-    height: 21em;
+    width: 29em;
+    height: 18em;
+    margin-top: 1em;
 }
 
 .UI {
@@ -13,15 +13,15 @@ div#main {
     }
 
 .topRow {
-    height: 2.2em;
+    height: 1em;
     }
 
 .midRow {
-    height: 15em;
+    height: 14em;
     }
 
 .botRow {
-    height: 3.4em;
+    height: 2em;
     }
     
 .leftCol {
@@ -29,19 +29,20 @@ div#main {
 }
 
 .midCol {
-    width: 24.8em;
+    width: 21em;
 }
 
 .rightCol {
-    width: 8em;
+    width: 4em;
 }
 
 #prev {
-    width: 8em;
+    width: 7.45em;
 }
 
 #filler {
-    width: 3.5em;
+    width: 1.35em;
+    border: white;
 }
 
 #laser {
@@ -53,9 +54,8 @@ div#main {
 }
 
 #next {
-    width: 8em;
+    width: 7.45em;
 }
-
 #laserButton {
     color: black;
 }
