--- a/www/css/lev_index_temp.css
+++ b/www/css/lev_index_temp.css
@@ -3,8 +3,8 @@
 
 /* removes all margins and padding.  
  * Font-size is set to 0 to remove borders between
- * the UI elements caused by whitespace in the HTML. For more info see:
-http://robertnyman.com/2010/02/24/css-display-inline-block-why-it-rocks-and-why-it-sucks/ */ 
+ * the UI elements caused by whitespace in the HTML. */
+
 * { margin: 0; padding: 0; font-size:0;}
 
 /*makes height be full screen */
@@ -12,14 +12,6 @@ html, body {height: 100%; }
     
 /* previous width and height in em units commented  
  * in case there is a need to revert. */
-
-div#main {
-    border: solid black 1px;
-    position: relative;
-    width: 100%; /* 29 em */
-    height: 100%; /* 18em; */
-    /* margin-top:  1em; */
-}
 
 /* all the UI elements (buttons, laser control, notes, etc)
  * currently have a black border for ease of development */
@@ -39,7 +31,7 @@ div#main {
     
 #theIframe {
     position: absolute;
-    width: 99%; height: 99%;
+    width: 70%; height: 74%;
     z-index: -1;
 }
     
