--- a/BACKEND/FRONTEND/www/css/index.css
+++ b/BACKEND/FRONTEND/www/css/index.css
@@ -1,315 +1,179 @@
-#remote-control
-{
-	position: relative;
-	background: url(remote-back2.jpg) no-repeat;
-	width: 224px;
-	height: 507px;
-}
-	
-#remote-control h2,
-	#remote-control span
-{
-	position: absolute;
-	left: -5000px;
-	}
-	
-#remote-control ul
-{
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	}
-	
-#home a,
-#sitemap a,
-#button1 a,
-#button2 a,
-#button3 a,
-#button4 a,
-#button5 a,
-#button6 a,
-#button7 a,
-#button8 a,
-#button9 a,
-#button10 a,
-#button11 a,
-#button12 a,
-#view a,
-#info a,
-#help a,
-#rewind a,
-#back a,
-#forward a,
-#top a,
-#bottom a,
-#ok a
-{
-	position: absolute;
-	display: block;
-	}
-	
-#remote-control li#home a
-{
-	left: 33px;
-	top: 29px;
-	width: 37px;
-	height: 37px;
-	background: url(remote-home.jpg) no-repeat;
-	}
-	
-#remote-control li#home a:hover
-{
-	background-image: url(remote-home.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 -37px;
-	}
-	
-#remote-control li#sitemap a
-{
-	left: 154px;
-	top: 29px;
-	width: 37px;
-	height: 37px;
-	background: url(remote-sitemap.jpg) no-repeat;
-	}
-	
-#remote-control li#sitemap a:hover
-{
-	background-image: url(remote-sitemap.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 -37px;
-	}
-	
-#remote-control li#button1 a,
-#remote-control li#button2 a,
-#remote-control li#button3 a,
-#remote-control li#button4 a,
-#remote-control li#button5 a,
-#remote-control li#button6 a,
-#remote-control li#button7 a,
-#remote-control li#button8 a,
-#remote-control li#button9 a,
-#remote-control li#button10 a,
-#remote-control li#button11 a,
-#remote-control li#button12 a
-{
-	width: 41px;
-	height: 21px;
-	background: url(remote-button.jpg) no-repeat;
-	}
-	
-#remote-control li#button1 a
-{
-	left: 38px;
-	top: 114px;
-	}
-	
-#remote-control li#button2 a
-{
-	left: 91px;
-	top: 114px;
-	}
-	
-#remote-control li#button3 a
-{
-	left: 145px;
-	top: 114px;
-	}
-	
-#remote-control li#button4 a
-{
-	left: 38px;
-	top: 155px;
-	}
-	
-#remote-control li#button5 a
-{
-	left: 91px;
-	top: 155px;
-	}
-	
-#remote-control li#button6 a
-{
-	left: 145px;
-	top: 155px;
-	}
-	
-#remote-control li#button7 a
-{
-	left: 38px;
-	top: 196px;
-	}
-	
-#remote-control li#button8 a
-{
-	left: 91px;
-	top: 196px;
-	}
-	
-#remote-control li#button9 a
-{
-	left: 145px;
-	top: 196px;
-	}
-	
-#remote-control li#button10 a
-{
-	left: 38px;
-	top: 237px;
-	}
-	
-#remote-control li#button11 a
-{
-	left: 91px;
-	top: 237px;
-	}
-	
-#remote-control li#button12 a
-{
-	left: 145px;
-	top: 237px;
-	}
-	
-#remote-control li#button1 a:hover,
-#remote-control li#button2 a:hover,
-#remote-control li#button3 a:hover,
-#remote-control li#button4 a:hover,
-#remote-control li#button5 a:hover,
-#remote-control li#button6 a:hover,
-#remote-control li#button7 a:hover,
-#remote-control li#button8 a:hover,
-#remote-control li#button9 a:hover,
-#remote-control li#button10 a:hover,
-#remote-control li#button11 a:hover,
-#remote-control li#button12 a:hover
-{
-	background-image: url(remote-button.jpg);
-	background-repeat: no-repeat;
-	background-position: 0 -21px;
-	}
-	
-#remote-control li#view a
-{
-	width: 29px;
-	height: 30px;
-	left: 41px;
-	top: 331px;
-	background: url(remote-circle3.jpg) no-repeat 0 -19px;
-	}
-	
-#remote-control li#info a
-{
-	width: 33px;
-	height: 23px;
-	left: 74px;
-	top: 312px;
-	background: url(remote-circle3.jpg) no-repeat -33px 0px;
-}
-	
-#remote-control li#help a
-{
-	width: 33px;
-	height: 23px;
-	left: 116px;
-	top: 312px;
-	background: url(remote-circle3.jpg) no-repeat -75px 0;
-}
-	
-#remote-control li#rewind a
-{
-	width: 29px;
-	height: 30px;
-	left: 154px;
-	top: 332px;
-	background: url(remote-circle3.jpg) no-repeat -113px -20px;
-}
-	
-#remote-control li#back a
-{
-	width: 25px;
-	height: 59px;
-	left: 58px;
-	top: 365px;
-	background: url(remote-circle3.jpg) no-repeat -17px -53px;
-}
-	
-#remote-control li#forward a
-{
-	width: 23px;
-	height: 59px;
-	left: 139px;
-	top: 365px;
-	background: url(remote-circle3.jpg) no-repeat -98px -53px;
-}
-	
-#remote-control li#top a
-{
-	width: 62px;
-	height: 23px;
-	left: 80px;
-	top: 342px;
-	background: url(remote-circle3.jpg) no-repeat -39px -30px;
-}
-	
-#remote-control li#bottom a
-{
-	width: 61px;
-	height: 22px;
-	left: 80px;
-	top: 424px;
-	background: url(remote-circle3.jpg) no-repeat -39px -112px;
-}
-	
-#remote-control li#ok a
-{
-	width: 44px;
-	height: 46px;
-	left: 89px;
-	top: 371px;
-	background: url(remote-circle3.jpg) no-repeat -48px -59px;
-}
-	
-#remote-control li#view a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat 0 -157px;
+/* This is the style sheet for the remote control
+ * found under index.html */
 
-}
-#remote-control li#info a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -33px -138px;
+/* removes all margins and padding. */
+
+* { margin: 0; padding: 0;}
+
+/*makes height be full screen */
+html, body {height: 100%; }
+
+body {
+    font-size: 100%;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: transparent; /* For some Androids */
 }
 
-#remote-control li#help a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -75px -138px;
+/* previous width and height in em units commented  
+ * in case there is a need to revert. */
+
+/* all the UI elements (buttons, laser control, notes, etc)
+ * currently have a black border for ease of development */
+.UI {
+    font-size: 3.4vw;
+    border: 1px solid black;
+    display: inline-block;
+    vertical-align: top;
+    }
+
+input[type=text] {
+    font-size: 3vw;
+    /*border: none;*/ /*turns off border on the URL element text box*/
+    border-style: inset;
 }
 
-#remote-control li#rewind a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -113px -158px;
+#timeDisplay {
+    font: bold 3.4vw impact, sans-serif;
+    text-align: center;
+    overflow: hidden;
 }
 
-#remote-control li#back a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -17px -191px;
+#notes {
+    position: relative;
+    overflow: scroll;
+    z-index: 1;
 }
 
-#remote-control li#forward a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -98px -191px;
+/* overlay element is intended to cover up the iframe to disable
+ * user interaction with the iframe. */ 
+#overlay {
+    position:absolute;
+    width: inherit; height: inherit;
+    border: none;
+    z-index: 0;
+}    
+    
+#theIframe {
+    position: absolute;
+    width: 233%; height: 239%;
+    z-index: 1;
+}
+    
+.topRow {
+    height: 7%;
+    }
+
+.midRow {
+    height: 71%;
+    }
+
+.botRow {
+    height: 14%;
+    opacity:0.7;
+    border: none;
 }
 
-#remote-control li#top a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -39px -168px;
+.leftCol {
+    width: 10%;
 }
 
-#remote-control li#bottom a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -39px -250px;
+.midCol {
+    width: 70%;
 }
 
-#remote-control li#ok a:hover
-{
-	background: url(remote-circle3.jpg) no-repeat -48px -197px;
+.rightCol {
+    width: 18.75%
+}
+
+#prev {
+    width: 20.7%;
+    background-image: url('../img/buttonPrev.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+    }
+    
+    #prev:active {
+        border-color: red;
+    }
+
+#next {
+    width: 20.7%;
+    
+    background-image: url('../img/buttonNext.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+    }
+    
+    #next:active {
+        border-color:red;
+    }
+
+/* filler elements are for spacing the buttons on the
+ * bottom row. */
+#filler {
+    width: 3.95%;
+    border: white;
+}
+
+#laser {
+    width: 13.8%;
+    color: black;
+    
+    background-image: url('../img/buttonLaser.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+    }
+
+#draw {
+    width: 13.8%;
+    color: black;
+    
+    background-image: url('../img/buttonDraw.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+    }
+
+#speech {
+    width: 13.8%;
+    color: black;
+    
+    background-image: url('../img/buttonSpeech.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+    }
+
+
+/* wrap and frame classes are for resizing the content inside
+ * the iframe */
+
+.wrap {
+    padding: 0;
+    overflow: hidden;
+}
+    
+.frame {
+    width: auto; height: auto;
+    border: 0;
+    
+    -ms-transform: scale(0.3);
+    -moz-transform: scale(0.3);
+    -o-transform: scale(0.3);
+    -webkit-transform: scale(0.3);
+    transform: scale(0.3);
+    
+    -ms-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    -o-tranform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
 }
