Thumbnails now display actual thumb images
1. buttons are hardcoded in div. should be dynamic.
2. images should be created dynamically along with slides.
3. We still have only thumbs for the first 6 slides. Mainly because I
couldn’t solve the issues of scrolling inside of the iframe.

--- a/BACKEND/FRONTEND/www/css/index.css
+++ b/BACKEND/FRONTEND/www/css/index.css
@@ -152,6 +152,16 @@ input[type=text] {
     
     }
 
+button {
+    width: 100%; height: 15%;
+    color: black;
+    
+    background-image: url('../img/buttonSpeech.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    
+    }
 
 /* wrap and frame classes are for resizing the content inside
  * the iframe */
