--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -263,6 +263,9 @@
 			padding-left: 10.5%;
 			padding-right: 10.5%;
 			text-align: justify;
+			white-space: nowrap;
+			max-height: 100%;
+			overflow-y: auto;
 		}
 		.paper:first-line {
 			font: 20pt Arial, sans-serif;
