fixed personalNotesPanel position

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -317,7 +317,7 @@
 		
 
 	    #personalNotesPanel{
-			position: absolute;
+			position: fixed;
 			bottom: 0px;
 			right: 0px;
 	    	bottom: 0px;
