--- a/AWS_Website/www_static/css/royalslider.css
+++ b/AWS_Website/www_static/css/royalslider.css
@@ -235,13 +235,14 @@ img.rsImg {
 }
 
 .grab-cursor {
-	cursor:url(grab.png) 8 8, move; 
+	cursor:url('../remote/img/grab.png') 8 8, move; 
 }
 
+/*
 .grabbing-cursor{ 
 	cursor:url(grabbing.png) 8 8, move;
 }
-
+*/
 .rsNoDrag {
 	cursor: auto;
 }
