--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -340,6 +340,24 @@
 		  color: black;
 		  display: none;
 		}
+		
+		#insertVideoSlideOverlay {
+		  opacity:    0.9; 
+		  background: black; 
+		  width:      100%;
+		  height:     100%; 
+		  z-index:    10;
+		  top:        0; 
+		  left:       0; 
+		  position:   fixed; 
+		  color: black;
+		  display: none;
+		}
+		
+		#insertVideoSlide{
+			padding-top:100px;
+			color: white;
+		}
 
 	    #HCB_comment_box{
 	    	height: 100%;
@@ -476,3 +494,49 @@
 				left: 5px;
 				top: 10px;
 			}
+			
+			input.rounded {
+
+				border: 1px solid #ccc;
+				-moz-border-radius: 10px;
+				-webkit-border-radius: 10px;
+				border-radius: 10px;
+				-moz-box-shadow: 2px 2px 3px #666;
+				-webkit-box-shadow: 2px 2px 3px #666;
+				box-shadow: 2px 2px 3px #666;
+				font-size: 20px;
+				padding: 4px 7px;
+				outline: 0;
+				-webkit-appearance: none;
+			}
+
+			input.rounded:focus {
+			  border-color: #339933;  
+			}
+			
+			.btn {
+				background: #3498db;
+				background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+				background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+				background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+				background-image: -o-linear-gradient(top, #3498db, #2980b9);
+				background-image: linear-gradient(to bottom, #3498db, #2980b9);
+				-webkit-border-radius: 18;
+				-moz-border-radius: 18;
+				border-radius: 18px;
+				font-family: Arial;
+				color: #ffffff;
+				font-size: 16px;
+				padding: 10px 20px 10px 20px;
+				text-decoration: none;
+				}
+
+			.btn:hover {
+				background: #3cb0fd;
+				background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+				background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+				background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+				background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+				background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+				text-decoration: none;
+				}
