--- a/AWS_Website/www_static/remote/css/index.css
+++ b/AWS_Website/www_static/remote/css/index.css
@@ -40,6 +40,9 @@ input[type=text] {
 }
 
 #timeDisplay {
+  position: absolute;
+  right: 5px;
+  float: right;
     font-size: 6.3vmin;
     text-align: center;
     overflow: hidden;
@@ -66,8 +69,8 @@ input[type=text] {
 #theIframe {
 	background: white;
     position: absolute;
-      width: 267%;
-  height: 289%;
+  width: 330%;
+  height: 260%;
     z-index: 1;
 }
     
@@ -76,11 +79,11 @@ input[type=text] {
     }
 
 .midRow {
-    height: 86%;
+    height: 80%;
     }
 
 .botRow {
-    height: 14%;
+    height: 8%;
     opacity:0.7;
     border: none;
 }
@@ -103,23 +106,27 @@ input[type=text] {
     
     }
     
-    #prev:active {
-        border-color: red;
-    }
+#prev:active {
+	border-color: red;
+}
 
 #next {
 
 }
     
-    #next:active {
-        border-color:red;
-    }
+#next:active {
+	border-color:red;
+}
 
 /* filler elements are for spacing the buttons on the
  * bottom row. */
 #filler {
     width: 3.95%;
     border: white;
+}
+
+#presenterMessage{
+font-size: 2.3vmin;
 }
 
 .button { 
