--- a/AWS_Website/www_static/remote/css/index.css
+++ b/AWS_Website/www_static/remote/css/index.css
@@ -129,13 +129,23 @@ input[type=text] {
 font-size: 2.3vmin;
 }
 
+.button_unpressed{
+	background-color: #125182; 
+	background: -moz-linear-gradient(top, #125182, #1269ab 50%, #004375 51%, #00345b);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #125182), color-stop(.5, #1269ab), color-stop(.51, #004375), to(#00345b)); 
+}
+
+.button_pressed{
+	background: gray; 
+}
+
 .button { 
   cursor: pointer;
   margin-top: 10px;
   margin-bottom: 10px;
-/*basic styles*/ width: 250px; height: 50px; color: #fff; background-color: #125182; text-align: center; font-size: 30px; line-height: 50px; 
-/*gradient styles*/ background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #125182), color-stop(.5, #1269ab), color-stop(.51, #004375), to(#00345b)); 
-background: -moz-linear-gradient(top, #125182, #1269ab 50%, #004375 51%, #00345b); /*border styles*/ -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; -moz-box-shadow:inset 0 0 10px #000000; -webkit-box-shadow:inset 0 0 10px #000000; box-shadow:inset 0 0 10px #000000; } 
+/*basic styles*/ width: 250px; height: 50px; color: #fff; text-align: center; font-size: 30px; line-height: 50px; 
+/*border styles*/ -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; -moz-box-shadow:inset 0 0 10px #000000; -webkit-box-shadow:inset 0 0 10px #000000; box-shadow:inset 0 0 10px #000000;
+} 
 .button p { font-size: 30px; line-height: 50px; font-family: “HelveticaNeue-Light”, “Helvetica Neue Light”, “Helvetica Neue”, Helvetica, Arial, “Lucida Grande”, sans-serif; font-weight: 300; text-shadow: 0px 0px 3px #555; } 
 a { text-decoration: none; color: fff; } 
 .button:hover { -moz-box-shadow:inset 0 0 50px #000000; -webkit-box-shadow:inset 0 0 50px #000000; box-shadow:inset 0 0 50px #000000; } 
