--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -2057,7 +2057,7 @@ body.landing #header {
 
 #banner {
     background-attachment: fixed;
-    background-image: url("../img/Slite_Background.png");
+    background-image: url("../img/Slite_Background.jpg");
     background-position: center center;
     background-size: cover;
     box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
@@ -2203,7 +2203,7 @@ body.is-touch #banner {
 
 /* uploadDialog */
 .uploadDialog {
-    position: absolute;
+    position: fixed;
     font-family: Arial, Helvetica, sans-serif;
     top: 0;
     right: 0;
@@ -2224,11 +2224,15 @@ body.is-touch #banner {
 }
 
 .uploadDialog > div {
-    width: 600px;
+    width: 50vw;
+    min-width: 100px;
+    max-width: 1000px;
+    padding: 4vh 3.5vw 6vh 3.5vw;
+    border-radius: 1em;
+    margin-left: 25vw;
+    margin-top: 35vh;
+
     position: relative;
-    margin: 30% auto;
-    padding: 5px 30px 20px 30px;
-    border-radius: 15px;
     background: #fff;
     background: -moz-linear-gradient(#fff, #999);
     background: -webkit-linear-gradient(#fff, #999);
@@ -2236,19 +2240,20 @@ body.is-touch #banner {
 }
 
 .closeUpload {
+    line-height: 6.0vh;
+    top: -3.0vh;
+    width: 2.3vw;
+    right: -1.2vw;
+    -webkit-border-radius: 1.5em;
+    -moz-border-radius: 1.5em;
+    border-radius: 1.5em;
+
     background: #606061;
     color: #FFFFFF;
-    line-height: 30px;
     position: absolute;
-    right: -12px;
     text-align: center;
-    top: -10px;
-    width: 28px;
     text-decoration: none;
     font-weight: bold;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    border-radius: 12px;
     -moz-box-shadow: 1px 1px 3px #000;
     -webkit-box-shadow: 1px 1px 3px #000;
     box-shadow: 1px 1px 3px #000;
@@ -2257,29 +2262,28 @@ body.is-touch #banner {
 .closeUpload:hover { background: #00d9ff; }
 
 #progressbar {
-    margin-top: 25px;
-    height:     40px;
+    margin-top: 1vh;
+    height:     7vh;
     background: #474747;
 }
 
 #uploadLabel {
     font-weight: bold;
     color: blue;
-    font-size: 28px;
+    /*font-size: 24px;*/
+    font-size: 1.8vw;
 }
-
 
 /*
 .ui-dialog-titlebar-close {
     display: none;
 }
-*/
+
 
 .ui-progressbar .ui-widget-header {
      color: blue;
      background: blue repeat-x 50% 50%;
 }
-
 
 /* Button Upload Presentation*/
 .uploadfile {
