--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -204,7 +204,7 @@
 			color: white;
 			line-height: normal;
 			overflow-x: hidden;
-			overflow-y: scroll@media screen and (min-width: 0px) and (max-width: 600px) {;
+			overflow-y: scroll;
 		}
 
 		#videochatpanel{
