--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -2330,7 +2330,7 @@ body.is-touch #banner {
     background:-webkit-linear-gradient(top, #ffec64 5%, #ffab23 100%);
     background:-o-linear-gradient(top, #ffec64 5%, #ffab23 100%);
     background:-ms-linear-gradient(top, #ffec64 5%, #ffab23 100%);
-    background: linear-gradient(to bottom, #EEECF7 5%, #0F45EF 100%);
+    background: linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
     background-color:#ffec64;
     -moz-border-radius:50px;
