--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -76,6 +76,22 @@
 		/* END MENU */
 
 
+		.curtain {
+		  float: right;
+		  height: 100%;
+		  width: 75px;
+		  opacity: 0.5;
+		}
+		
+		.leftCurtain{
+			float: left;
+			-moz-transform: scaleX(-1);
+			-o-transform: scaleX(-1);
+			-webkit-transform: scaleX(-1);
+			transform: scaleX(-1);
+			filter: FlipH;
+			-ms-filter: "FlipH";
+		}
 		
 		#video-gallery {
       position: absolute;
