--- a/AWS_Website/www_static/css/style.css
+++ b/AWS_Website/www_static/css/style.css
@@ -2357,3 +2357,24 @@ body.is-touch #banner {
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffab23', endColorstr='#ffec64',GradientType=0);
 	background-color:#ffab23;*/ 
 }
+
+.curtain {
+	z-index: 5;
+	position: absolute;
+	right: 0px;
+	float: right;
+	height: 100%;
+	width: 75px;
+	opacity: 0.2;
+}
+
+.leftCurtain{
+	left: 0px;
+	float: left;
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+	filter: FlipH;
+	-ms-filter: "FlipH";
+}
