--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -77,14 +77,16 @@
 
 
 		.curtain {
-		  float: right;
+			z-index: 5;
+		  position: absolute;
+		  right: 0px;
 		  height: 100%;
 		  width: 75px;
 		  opacity: 0.5;
 		}
 		
 		.leftCurtain{
-			float: left;
+			left: 0px;;
 			-moz-transform: scaleX(-1);
 			-o-transform: scaleX(-1);
 			-webkit-transform: scaleX(-1);
@@ -179,10 +181,12 @@
 			position: fixed;
 			right: 20px;
 			top: 0px;
-			opacity: 0.4;
 			filter: alpha(opacity=40);
 			z-index: 2;
 			cursor: pointer;
+			vertical-align: top;
+			color: white;
+			text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 		}
 
 	    #redDot {
