--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -97,8 +97,8 @@
 		
 		#video-gallery {
 		  position: absolute;
-		  left:5%;
-		  right:5%;
+		  /* left:5%;
+		  right:5%; */
 		  z-index: 0;
 		  width: 90%;
 		  height: 100%;
