--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -217,7 +217,7 @@
 	    	left: 0px;
 			top: 0px;
 	    	width: 20%;
-	    	height: 100vh;
+	    	/* height: 100vh; */
 	    	display: none;
 			margin-left: 10px;
 	    	background-color: #444444;
@@ -229,7 +229,7 @@
 			color: white;
 			line-height: normal;
 			overflow-x: hidden;
-			overflow-y: scroll;
+			overflow-y: hidden;
 		}
 
 		#videochatpanel{
