--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -216,14 +216,14 @@
 	    	position: absolute;
 	    	left: 0px;
 			top: 0px;
-	    	width: 20%;
+	    	width: 25%;
 	    	/* height: 100vh; */
 	    	display: none;
 			margin-left: 10px;
 	    	/*
 			background-color: #444444;
-  			background-image: -webkit-linear-gradient(top, #444444, #999999); /* Chrome 10-25, iOS 5+, Safari 5.1+ */
-  			background-image: linear-gradient(to bottom, #444444, #999999); /* Chrome 26, Firefox 16+, IE 10+, Opera */
+  			background-image: -webkit-linear-gradient(top, #444444, #999999); 
+			background-image: linear-gradient(to bottom, #444444, #999999); 
 			*/
 			border-color: lightblue;
 			border-radius: 25px;
@@ -234,6 +234,11 @@
 			line-height: normal;
 			overflow-x: hidden;
 			overflow-y: hidden;
+		}
+		
+		#videos-container{
+			margin-bottom: 10px;
+			margin-left: 5px;
 		}
 
 		#videochatpanel{
@@ -256,15 +261,18 @@
 	    	position: absolute;
 	    	bottom: 0px;
 			left: 0px;
-	    	width: 50%;
+	    	width: 25%%;
 	    	height: 500px;
 	    	display: none;
 	    }
 		
-		.panelTitle{
-			font-size:20px;
+		.panelTitle{  
+			position: absolute;
+			left: 3;
+			font-size:14px;
 			font-weight: bold;
 			color: #8E8D8D;
+			width: 100%;
 		}
 
 	    #personalNotes{
