--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -263,7 +263,7 @@
 	    	bottom: 0px;
 			left: 0px;
 	    	width: 25%%;
-	    	height: 500px;
+	    	height: 52%;
 	    	display: none;
 	    }
 		
