--- a/AWS_Website/www_static/remote/css/index.css
+++ b/AWS_Website/www_static/remote/css/index.css
@@ -40,15 +40,26 @@ input[type=text] {
 }
 
 #timeDisplay {
-  position: absolute;
-  right: 5px;
-  float: right;
-    font-size: 6.3vmin;
-    text-align: center;
-    overflow: hidden;
+	/*position: absolute;
+	right: 5px;
+	float: right;	
+	opacity:0.7;*/
+	font-size: 6.3vmin;
+	text-align: center;
+	overflow: hidden;
 	cursor: pointer;
 	color: rgb(69, 166, 247);
-	opacity:0.7;
+}
+
+#currentSlide {
+	position: absolute;
+	top: 0px;
+}
+
+#navButtons {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
 }
 
 #notes {
@@ -60,18 +71,21 @@ input[type=text] {
 /* overlay element is intended to cover up the iframe to disable
  * user interaction with the iframe. */ 
 #overlay {
-    position:absolute;
-    width: inherit; height: inherit;
-    border: none;
-    z-index: 0;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border: none;
+	z-index: 0;
 }    
     
 #theIframe {
-	background: white;
-    position: absolute;
-  width: 330%;
-  height: 260%;
-    z-index: 1;
+  background: white;
+  position: relative;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  overflow: hidden
 }
     
 .topRow {
@@ -79,7 +93,7 @@ input[type=text] {
     }
 
 .midRow {
-    height: 80%;
+    height: 92%;
     }
 
 .botRow {
@@ -94,7 +108,7 @@ input[type=text] {
 }
 
 .midCol {
-    width: 80%;
+    width: 100%;
 	margin-left: 5px;
 }
 
@@ -206,7 +220,7 @@ button {
 .frame {
     width: auto; height: auto;
     border: 0;
-    
+    /*
     -ms-transform: scale(0.3);
     -moz-transform: scale(0.3);
     -o-transform: scale(0.3);
@@ -218,4 +232,5 @@ button {
     -o-tranform-origin: 0 0;
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
+	*/
 }
