--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -386,6 +386,41 @@
 		  color: black;
 		  display: none;
 		}
+
+		#PasswordCreateOverlay {
+		  opacity:    0.9; 
+		  background: black; 
+		  width:      100%;
+		  height:     100%; 
+		  z-index:    10;
+		  top:        0; 
+		  left:       0; 
+		  position:   fixed; 
+		  color: black;
+		  display: none;
+		}
+
+		#passwordDialog {
+			padding-top:25%;
+			color: white;
+		}
+
+		#PasswordCheckOverlay {
+		  background: black; 
+		  width:      100%;
+		  height:     100%; 
+		  z-index:    10;
+		  top:        0; 
+		  left:       0; 
+		  position:   fixed; 
+		  color: black;
+		  display: none;
+		}
+
+		#passwordCheckDialog {
+			padding-top:25%;
+			color: white;
+		}
 		
 		#insertVideoSlideOverlay {
 		  opacity:    0.9; 
