--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -2,6 +2,12 @@
 			/* background-color:rgba(0,0,255,0.3); */
 		}
 		
+		.grayedOut {
+			opacity: 0.5;
+			filter: alpha(opacity=50);
+			background-color: #B0AAAA;
+			cursor: default;
+		}
 		
 		/* MENU */
 		#primary_nav_wrap
