Support for localhost

--- a/AWS_Website/www_static/css/index1.css
+++ b/AWS_Website/www_static/css/index1.css
@@ -1,5 +1,5 @@
 html {
-    background: url(http://pixabay.com/get/4685ccc06fe876eefacb/1422583939/auditorium-572776_1920.jpg) no-repeat center center fixed;
+    /*background: url(http://pixabay.com/get/4685ccc06fe876eefacb/1422583939/auditorium-572776_1920.jpg) no-repeat center center fixed;*/
     -webkit-background-size: cover;
        -moz-background-size: cover;
          -o-background-size: cover;
