--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -257,6 +257,20 @@
   			background-image: -webkit-linear-gradient(top, #444444, #999999); /* Chrome 10-25, iOS 5+, Safari 5.1+ */
   			background-image: linear-gradient(to bottom, #444444, #999999); /* Chrome 26, Firefox 16+, IE 10+, Opera */
 		}
+		
+		#screensharing{
+			position: fixed;
+			right: 0px;
+			top: 0px;
+			width: 55%;
+			height: 98%;
+			background-color: rgb(231, 228, 228);
+			display: none;
+		}
+		
+		#videos-container-screensharing > video {
+			width: 100%;
+		}
 
 	    #comments{
 			background-color: white;
@@ -517,6 +531,23 @@
 				text-align: center;
 				font-size: 40px;
 				line-height: 40px;
+			}
+			
+			.closescreensharing{
+				float:left;
+				margin-top:5px;
+				margin-right:3px;
+				cursor:pointer;
+				color: #fff;
+				border: 1px solid #AEAEAE;
+				border-radius: 30px;
+				background: #605F61;
+				font-size: 31px;
+				display: inline-block;
+				line-height: 0px;
+				padding: 11px 3px; 
+				text-decoration: none;	
+				opacity: 0.6		
 			}
 			
 			.closevideo{
