Improvements to screenshare

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -101,6 +101,10 @@
 			-ms-filter: "FlipH";
 		}
 		
+		#shareYourScreen{
+			display: none;
+		}
+		
 		#video-gallery {
 		  /* position: absolute;
 		  left:5%;
