--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -427,6 +427,30 @@
 		  color: black;
 		  display: none;
 		}
+		
+		#renamePresentationOverlay {
+		  opacity:    0.9; 
+		  background: black; 
+		  width:      100%;
+		  height:     100%; 
+		  z-index:    10;
+		  top:        0; 
+		  left:       0; 
+		  position:   fixed; 
+		  color: black;
+		  display: none;		
+		}
+		
+		#renameHashButton {
+		  border-style: none;
+		  width: 120px;
+		  height: 30px;
+		}
+		
+		#renameHashDialog{
+			padding-top: 25%;
+			color: white;
+		}
 
 		#PasswordCreateOverlay {
 		  opacity:    0.9; 
