Screensharing interaction improvements

--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -428,6 +428,10 @@
 		  display: none;
 		}
 		
+		#pleaseWaitForScreenSharing {
+			display: none;
+		}
+		
 		#renamePresentationOverlay {
 		  opacity:    0.9; 
 		  background: black; 
