--- a/BACKEND/FRONTEND/www/css/index.css
+++ b/BACKEND/FRONTEND/www/css/index.css
@@ -143,17 +143,27 @@ left: 10%;
     float: left;
     display: inline-block;
     height: 80px;
-    width: 18%;
+    width: 19%;
     font-size: 45px;
     font-weight: bold;
-    border-width: 8px;
+    border-width: 4px;
     border-style: solid;
     border-color: blue;
     border-radius: 25px;
-      background: -webkit-linear-gradient(white, blue); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(white, blue); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(white, blue); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(white, blue); /* Standard syntax */
+}
+
+.buttons_off {
+    background: -webkit-linear-gradient(white, blue); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(white, blue); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(white, blue); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(white, blue); /* Standard syntax */
+}
+
+.buttons_on {
+    background: -webkit-linear-gradient(yellow, white); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(yellow, white); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(yellow, white); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(yellow, white); /* Standard syntax */
 }
 
 .buttons_div {
