--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -432,6 +432,10 @@
 			display: none;
 		}
 		
+		#paypalNewHash {
+			width: auto;
+		}
+		
 		#renamePresentationOverlay {
 		  opacity:    0.9; 
 		  background: black; 
