--- a/AWS_Website/www_static/css/app.css
+++ b/AWS_Website/www_static/css/app.css
@@ -1,5 +1,9 @@
 #login-screen, #main-chat-screen {
-  padding-top: 10px;
+	padding-top: 10px;
+    position: absolute;
+    right: 0px;
+    width: 100%;
+    height: 95%;
 }
 .main {
   padding-top: 10px;
@@ -12,7 +16,19 @@
   margin-left: 12px;
   overflow: scroll;
   z-index: 1;
+  height: 99%;
 }
+
+#chatForm {
+    position: absolute;
+    left: 0px;
+    width: 90%;
+}
+
+.conversationAndPeople {
+    height: 88%;
+}
+
 .final {
   font-color: #000;
 }
