--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/buttons.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/buttons.css
@@ -2,8 +2,7 @@
   -webkit-border-radius: 14;
   -moz-border-radius: 14;
   border-radius: 14px;
-  font-family:'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
-  color: #ffffff;
+  font-family: 'Varela Round', sans-serif;
   font-size: 15px;
   background: #bababa;
   padding: 4px 8px 4px 8px;
@@ -26,7 +25,7 @@
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family:'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Varela Round', sans-serif;
   color: #ffffff;
   font-size: 20px;
   background: #428bca;
@@ -57,9 +56,7 @@
   -moz-border-radius: 28;
   border-radius: 28px;
   text-shadow: 2px 2px 7px #666666;
-  font-family:'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
-  color: #000000;
-  font-size: 28px;
+  font-family: 'Varela Round', sans-serif;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
   border-width: 0px;
