--- a/AWS_Website/www_static/A1/css/A1.css
+++ b/AWS_Website/www_static/A1/css/A1.css
@@ -270,6 +270,7 @@
 			height: 98%;
 			background-color: rgb(231, 228, 228);
 			display: none;
+			z-index: 1;
 		}
 		
 		#videos-container-screensharing > video {
@@ -586,22 +587,9 @@
 				line-height: 40px;
 			}
 			
-			.closevideo {
+			.closevideo{
 				float:right;
-				margin-top:10px;
-				margin-right:3px;
-				cursor:pointer;
-				width: 30px;
-				height: 30px;
-				background: url(../img/close.svg);
-				opacity: 0.35
-			}
-
-			.closevideo:hover {
-				opacity: 0.6
-			}
-				/*float:right;
-				margin-top:10px;
+				margin-top:5px;
 				margin-right:3px;
 				cursor:pointer;
 				color: #fff;
@@ -614,11 +602,11 @@
 				padding: 11px 3px; 
 				text-decoration: none;	
 				opacity: 0.6
-			}*/
+			}
 
-			/*.closevideo:before {
+			.closevideo:before {
 				content: "×";
-			}*/
+			}
 			
 			.startTemporaryPopup{
 				display: none;
