--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/buttons.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/buttons.css
@@ -9,3 +9,18 @@
 .close:hover {
   opacity: 0.6
 }
+
+.menu { 
+  width: 30px;
+  height: 30px;
+  cursor:pointer;
+  background: url(../images/menu-icon.svg);
+  background-size: 30px 30px;
+  background-repeat: no-repeat;
+  opacity: 0.35
+}
+
+.menu:hover {
+  opacity: 0.6
+}
+
