[refactor] Style guide changes after email, button gradient, colors, font

--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/font.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/font.css
@@ -1,5 +1,25 @@
 .font {
-  font-family: 'Varela Round', sans-serif;
+  font-family: 'Raleway', sans-serif;
+}
+
+.font2 {
+  font-family: 'Orbitron', sans-serif;
+}
+
+.font3 {
+  font-family: 'Roboto', sans-serif;
+}
+
+.font4 {
+  font-family: 'Rubik', sans-serif;
+}
+
+.font5 {
+  font-family: 'Krona One', sans-serif;
+}
+
+.font6 {
+  font-family: 'Baumans', cursive;
 }
 
 .size1 {
