--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/buttons.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/buttons.css
@@ -39,21 +39,30 @@
   margin: 0;
   padding: 10px 20px;
   overflow: visible;
-  border: 1px solid #018dc4;
+  border: 1px solid #7badd9;
   -webkit-border-radius: 3px;
   border-radius: 3px;
   font: normal 16px/normal "Times New Roman", Times, serif;
   color: rgba(255,255,255,0.9);
   -o-text-overflow: clip;
   text-overflow: clip;
-  background: #0199d9;
-  -webkit-box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
-  box-shadow: 2px 2px 2px 0 rgba(0,0,0,0.2) ;
+  background: -webkit-linear-gradient(-90deg, #cee0ef 0, #7badd9 100%);
+  background: -moz-linear-gradient(180deg, #cee0ef 0, #7badd9 100%);
+  background: linear-gradient(180deg, #cee0ef 0, #7badd9 100%);
+  background-position: 50% 50%;
+  -webkit-background-origin: padding-box;
+  background-origin: padding-box;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  -webkit-background-size: auto auto;
+  background-size: auto auto;
+  -webkit-box-shadow: none;
+  box-shadow: none;
   text-shadow: -1px -1px 0 rgba(15,73,168,0.66) ;
-  -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-  -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-  -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
-  transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+  -webkit-transition: none;
+  -moz-transition: none;
+  -o-transition: none;
+  transition: none;
   -webkit-transform: none;
   transform: none;
   -webkit-transform-origin: 50% 50% 0;
@@ -61,6 +70,8 @@
 }
 
 .join:hover {
-   background: #048cc5;
+  background: -webkit-linear-gradient(-90deg, #7badd9 0, #cee0ef 100%);
+  background: -moz-linear-gradient(180deg, #7badd9 0, #cee0ef 100%);
+  background: linear-gradient(180deg, #7badd9 0, #cee0ef 100%);
 }
 
