--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/color_palette.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/color_palette.css
@@ -11,22 +11,10 @@
   background: #7badd9;
 }
 
-.lightBlue {
-  width: 100px;
-  height: 100px;
-  background: #95bada;
-}
-
 .gray {
   width: 100px;
   height: 100px;
   background: #c4c4c4;
-}
-
-.lightGray {
-  width: 100px;
-  height: 100px;
-  background: #e6e5e5;
 }
 
 .black {
@@ -35,35 +23,7 @@
   background: #000000;
 }
 
-.grayBlue {
-  width: 100px;
-  height: 100px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c4c4c4+0,7badd9+100 */
-  background: rgb(196,196,196); /* Old browsers */
-  background: -moz-linear-gradient(top, rgba(196,196,196,1) 0%, rgba(123,173,217,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(196,196,196,1)), color-stop(100%,rgba(123,173,217,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(196,196,196,1) 0%,rgba(123,173,217,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(196,196,196,1) 0%,rgba(123,173,217,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(196,196,196,1) 0%,rgba(123,173,217,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom, rgba(196,196,196,1) 0%,rgba(123,173,217,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c4c4c4', endColorstr='#7badd9',GradientType=0 ); /* IE6-9 */
-}
-
-.lightGrayBlue {
-  width: 100px;
-  height: 100px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e6e5e5+0,95bada+100 */
-  background: rgb(230,229,229); /* Old browsers */
-  background: -moz-linear-gradient(top, rgba(230,229,229,1) 0%, rgba(149,186,218,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(230,229,229,1)), color-stop(100%,rgba(149,186,218,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, rgba(230,229,229,1) 0%,rgba(149,186,218,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top, rgba(230,229,229,1) 0%,rgba(149,186,218,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, rgba(230,229,229,1) 0%,rgba(149,186,218,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom, rgba(230,229,229,1) 0%,rgba(149,186,218,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6e5e5', endColorstr='#95bada',GradientType=0 ); /* IE6-9 */
-}
-
-.grayGray {
+.greyGrey {
   width: 100px;
   height: 100px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#e6e5e5+0,c4c4c4+100 */
@@ -80,20 +40,6 @@
 .whiteBlue {
   width: 100px;
   height: 100px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,95bada+100 */
-  background: rgb(255,255,255); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(149,186,218,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(149,186,218,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(149,186,218,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(149,186,218,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(149,186,218,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(149,186,218,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#95bada',GradientType=0 ); /* IE6-9 */
-}
-
-.whiteDarkBlue {
-  width: 100px;
-  height: 100px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,7badd9+100 */
   background: rgb(255,255,255); /* Old browsers */
   background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(123,173,217,1) 100%); /* FF3.6+ */
@@ -105,17 +51,5 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#7badd9',GradientType=0 ); /* IE6-9 */
 }
 
-.grayBlack {
-  width: 100px;
-  height: 100px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#c4c4c4+0,000000+100 */
-  background: rgb(196,196,196); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(196,196,196,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(196,196,196,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  rgba(196,196,196,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  rgba(196,196,196,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  rgba(196,196,196,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  rgba(196,196,196,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c4c4c4', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
-}
+
 
