[refactor] Style guide changed: 2 fonts set with sample sizes, top of styleguide gray changed to color gray 1) Top of the page, this is not the grey we chose below, can you update it please?

--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/font.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/font.css
@@ -1,24 +1,8 @@
-.font {
+.fontR {
   font-family: 'Raleway', sans-serif;
 }
 
-.font2 {
-  font-family: 'Orbitron', sans-serif;
-}
-
-.font3 {
-  font-family: 'Roboto', sans-serif;
-}
-
-.font4 {
-  font-family: 'Rubik', sans-serif;
-}
-
-.font5 {
-  font-family: 'Krona One', sans-serif;
-}
-
-.font6 {
+.fontB {
   font-family: 'Baumans', cursive;
 }
 
