--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/demo.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/demo.css
@@ -55,7 +55,7 @@ nav:not(.mm-menu)
 .header,
 .footer
 {
-	background: #777;
+	background: #c4c4c4;
 	font-size: 16px;
 	font-weight: bold;
 	color: #fff;
