[refactor] Updated Styleguide font to font-family: 'Raleway', sans-serif;

--- a/AWS_Website/www_static/A1/styleguide/css_styleguide/demo.css
+++ b/AWS_Website/www_static/A1/styleguide/css_styleguide/demo.css
@@ -6,7 +6,7 @@ html, body
 body
 {
 	background-color: #fff;
-	font-family: Arial, Helvetica, Verdana;
+	font-family: 'Raleway', sans-serif;
 	font-size: 14px;
 	line-height: 22px;
 	color: #666;
